Fix bug with source comments toggle. Fix bug with keyboard shortcut dialog, and <html> overflow.

--- a/php/6.1/assets/sass/application.scss
+++ b/php/6.1/assets/sass/application.scss
@@ -23,6 +23,10 @@
 
 // Editor specific styling
 
+html {
+  overflow: hidden !important;
+}
+
 html,
 body,
 .off-canvas__outer,
@@ -136,7 +140,7 @@ Removes some of the styling on the page-level splitters
   width: 1.5em !important;
   position: absolute;
   padding: 0 !important;
-  left: -1.3em;
+  left: -1.1em;
   top: -.85em
 }
 
@@ -181,14 +185,13 @@ Removes some of the styling on the page-level splitters
 // Bookmark icon bar
 .transUnitCol:first-child > ul > li:nth-of-type(3) {
   padding-left: .75em;
-  position: absolute;
-  bottom: .5em;
-  left: 0;
+  padding-bottom: 0.3em;
+  margin-top: -1.8em;
 }
 
 .transUnitCol:first-child > ul > li:nth-of-type(3) > a {
   // override l--push-top-quarter class
-  margin-top: 0 !important;
+  margin-top: .1em !important;
 }
 
 .TableEditorRow > li:nth-of-type(3) {
@@ -743,10 +746,50 @@ td.RejectedStateDecoration div div div
     cursor: default;
 }
 
-.keyShortcutPanel
-{
-  border:none;
-  z-index: 100
+.keyShortcutPanel {
+  @include transform(translateX(-50%));
+  border: none !important;
+  z-index: 4000;
+  left: 50% !important;
+  top: 1em !important;
+  background-color: rgba(0, 0, 0, 0.7) !important;
+  border-radius: 2px;
+  overflow: auto !important;
+  max-height: 95%;
+  .popupContent > div {
+    opacity: 1 !important;
+    background-color: transparent !important;
+  }
+  h2 {
+    margin: 0;
+    color: #fff !important;
+  }
+  .txt--lead {
+    color: #ddd !important;
+    margin-top: 1em !important;
+  }
+  table {
+    display: table !important;
+  }
+  tr {
+    background-color: transparent !important;
+  }
+  td {
+    border: none !important;
+    border-bottom: 1px solid #444 !important;
+    color: #ddd !important;
+    background-color: transparent !important;
+  }
+  tbody > tr:last-child td {
+    border: none !important;
+  }
+  tr > td:first-child {
+    width: 25%;
+  }
+
+  tr > td:last-child {
+    width: 75%;
+  }
 }
 
 #gwt-debug-TMMerge {
@@ -912,6 +955,7 @@ a.downloadLink
 
 .translatorEditorContainer > div:nth-of-type(2) {
   overflow:visible !important;
+  left: 5px !important;
 }
 
 .translatorEditorContainer > div:nth-of-type(4) {
